UHF-12582: Patch gin_toolbar

--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,13 @@
         "drupal/admin_toolbar": "^3.0",
         "drupal/gin": "^4.0 || ^5.0"
     },
+    "extra": {
+        "patches": {
+            "drupal/gin_toolbar": {
+                "[#3552735] Dialog library causing Drupal CSS aggregation to link to non-existent CSS file": "https://www.drupal.org/files/issues/2025-10-17/3552735-dialog-library-reordering-css-aggregation-fix-2.patch"
+            }
+        }
+    },
     "conflict": {
         "drupal/helfi_platform_config": "<4.16.68",
         "drupal/helfi_api_base": "<2.7.6"
